Testing format update

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 <body>
 <div class="header">
   <h1>Adobe Experience Cloud</h1>
-  <div class="subtitle">Sales Question Trees — Conversation Guides for the POP New Business Team</div>
+  <div class="subtitle">New Business Question Trees — Conversation Guides for the POP New Business Team</div>
   <span class="pop-badge">POP × Adobe Partnership</span>
 </div>
 
 <div class="intro">
-  <p>Each question tree below covers a specific Adobe Experience Cloud product. Click any card to open an interactive guide with common client questions, recommended responses, conversation redirects, and POP value positioning. Use these before or during prospect conversations to navigate technical and business discussions with confidence.</p>
+  <p>Each question tree below covers a specific Adobe Experience Cloud product. Click any card to open an interactive guide with common client questions, recommended responses, conversation redirects, and POP value positioning. Use these before or during prospect conversations to navigate technical and business discussions with confidence.<br /></p>
 </div>
 
 <div class="how-to">
