--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   .header h1 { font-size: 32px; font-weight: 700; letter-spacing: -0.5px; }
   .header .subtitle { color: #aaa; font-size: 15px; margin-top: 6px; }
   .header .pop-badge { display: inline-block; background: var(--pop-red); color: #fff; padding: 6px 18px; border-radius: 20px; font-size: 12px; font-weight: 700; margin-top: 16px; letter-spacing: 1px; text-transform: uppercase; }
-  .intro { max-width: 800px; margin: 32px auto 0; padding: 0 24px; text-align: center; }
+  .intro { max-width: 800px; margin: 32px auto 0; padding: 0 24px 14px 0; text-align: center; }
   .intro p { color: var(--pop-mid); font-size: 15px; line-height: 1.7; }
   .grid { max-width: 960px; margin: 36px auto 60px; padding: 0 24px; display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; }
   .card { background: #fff; border: 1px solid #E5E7EB; border-radius: 12px; padding: 28px 24px; text-decoration: none; color: inherit; transition: all 0.2s; display: flex; flex-direction: column; }
@@ -55,7 +55,7 @@
 </div>
 
 <div class="intro">
-  <p>Each question tree below covers a specific Adobe Experience Cloud product. Click any card to open an interactive guide with common client questions, recommended responses, conversation redirects, and POP value positioning. Use these before or during prospect conversations to navigate technical and business discussions with confidence.<br /></p>
+  <p>Each question tree below covers a specific Adobe Experience Cloud product. Click any card to open an interactive guide with common client questions, recommended responses, conversation redirects, and POP value positioning. Use these before or during prospect conversations to navigate technical and business discussions with confidence.</p>
 </div>
 
 <div class="how-to">
