--- a/ajo-question-tree.html
+++ b/ajo-question-tree.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>POP × Adobe Journey Optimizer (AJO) — Question Tree</title>
+<title>POP × Adobe Journey Optimizer (AJO): Question Tree</title>
 <style>
   :root {
     --pop-red: #E63946;
@@ -74,7 +74,7 @@
 <body>
 <div class="header">
   <h1>Adobe Journey Optimizer (AJO)</h1>
-  <div class="subtitle">POP Sales Question Tree — Conversation Guide</div>
+  <div class="subtitle">POP Sales Question Tree: Conversation Guide</div>
   <span class="product-badge">JOURNEY ORCHESTRATION</span>
 </div>
 <div class="search-bar"><input type="text" id="search" placeholder="Search questions…" oninput="filterQuestions(this.value)"></div>
