--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>POP × Adobe Experience Cloud — Sales Question Trees</title>
+<title>POP × Adobe Experience Cloud: Sales Question Trees</title>
 <style>
   :root {
     --pop-red: #E63946;
@@ -17,7 +17,7 @@
   .header h1 { font-size: 32px; font-weight: 700; letter-spacing: -0.5px; }
   .header .subtitle { color: #aaa; font-size: 15px; margin-top: 6px; }
   .header .pop-badge { display: inline-block; background: var(--pop-red); color: #fff; padding: 6px 18px; border-radius: 20px; font-size: 12px; font-weight: 700; margin-top: 16px; letter-spacing: 1px; text-transform: uppercase; }
-  .intro { max-width: 800px; margin: 32px auto 0; padding: 0 24px 14px 0; text-align: center; }
+  .intro { max-width: 800px; margin: 32px auto 0; padding: 0 24px; text-align: center; }
   .intro p { color: var(--pop-mid); font-size: 15px; line-height: 1.7; }
   .grid { max-width: 960px; margin: 36px auto 60px; padding: 0 24px; display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; }
   .card { background: #fff; border: 1px solid #E5E7EB; border-radius: 12px; padding: 28px 24px; text-decoration: none; color: inherit; transition: all 0.2s; display: flex; flex-direction: column; }
@@ -50,7 +50,7 @@
 <body>
 <div class="header">
   <h1>Adobe Experience Cloud</h1>
-  <div class="subtitle">New Business Question Trees — Conversation Guides for the POP New Business Team</div>
+  <div class="subtitle">Sales Question Trees: Conversation Guides for the POP New Business Team</div>
   <span class="pop-badge">POP × Adobe Partnership</span>
 </div>
 
@@ -63,9 +63,9 @@
     <h3>How to Use These Guides</h3>
     <p>Each question tree contains root-level questions (things a prospect is likely to ask) with 1–2 levels of follow-up questions beneath them. For every question you'll find three types of guidance:</p>
     <div class="legend">
-      <div class="legend-item"><div class="legend-dot green"></div> Recommended Response — what to say</div>
-      <div class="legend-item"><div class="legend-dot amber"></div> Redirect — how to steer the conversation toward discovery</div>
-      <div class="legend-item"><div class="legend-dot blue"></div> POP's Value — how to position our services</div>
+      <div class="legend-item"><div class="legend-dot green"></div> Recommended Response: what to say</div>
+      <div class="legend-item"><div class="legend-dot amber"></div> Redirect: how to steer the conversation toward discovery</div>
+      <div class="legend-item"><div class="legend-dot blue"></div> POP's Value: how to position our services</div>
     </div>
   </div>
 </div>
@@ -152,10 +152,20 @@
     </div>
   </a>
 
+  <a href="aem-guides-question-tree.html" class="card">
+    <span class="badge orchestration">Structured Content &amp; CCMS</span>
+    <h2>AEM Guides</h2>
+    <p>DITA-based structured authoring, content reuse, omnichannel publishing, and AI-assisted content management. Covers MadCap/Paligo comparison and migration.</p>
+    <div class="meta">
+      <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
+      6 root questions · 2 levels deep
+    </div>
+  </a>
+
 </div>
 
 <div class="footer">
-  POP × Adobe Experience Cloud — Sales Enablement Materials — Confidential
+  POP × Adobe Experience Cloud // Sales Enablement Materials // Confidential
 </div>
 </body>
 </html>
