--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   .header h1 { font-size: 32px; font-weight: 700; letter-spacing: -0.5px; }
   .header .subtitle { color: #aaa; font-size: 15px; margin-top: 6px; }
   .header .pop-badge { display: inline-block; background: var(--pop-red); color: #fff; padding: 6px 18px; border-radius: 20px; font-size: 12px; font-weight: 700; margin-top: 16px; letter-spacing: 1px; text-transform: uppercase; }
-  .intro { max-width: 800px; margin: 32px auto 0; padding: 0 24px; text-align: center; }
+  .intro { max-width: 800px; margin: 32px auto 0; padding: 0 24px 14px 0; text-align: center; }
   .intro p { color: var(--pop-mid); font-size: 15px; line-height: 1.7; }
   .grid { max-width: 960px; margin: 36px auto 60px; padding: 0 24px; display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; }
   .card { background: #fff; border: 1px solid #E5E7EB; border-radius: 12px; padding: 28px 24px; text-decoration: none; color: inherit; transition: all 0.2s; display: flex; flex-direction: column; }
@@ -126,16 +126,6 @@
     <span class="badge analytics">Digital Analytics</span>
     <h2>Adobe Analytics</h2>
     <p>Analysis Workspace, advanced segmentation, AI-powered insights, and data collection strategy. Covers GA4 comparison and measurement frameworks.</p>
-    <div class="meta">
-      <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
-    </div>
-  </a>
-
-  <a href="campaign-question-tree.html" class="card">
-    <span class="badge campaign">Campaign Management</span>
-    <h2>Adobe Campaign</h2>
-    <p>Cross-channel campaign orchestration, visual workflows, deliverability management, and AI content generation. Covers SFMC comparison and migration.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
       6 root questions · 2 levels deep
