More Content Updates
Fix chevron

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <p>The data layer powering the entire Adobe ecosystem. Covers XDM schemas, data ingestion, identity resolution, real-time profiles, and governance.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
+      6 questions
     </div>
   </a>
 
@@ -88,7 +88,7 @@
     <p>Unified customer profiles, real-time segmentation, and 600+ activation destinations. Covers DMP migration, privacy, and competitive positioning.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
+      6 questions
     </div>
   </a>
 
@@ -98,7 +98,7 @@
     <p>Omnichannel journey orchestration with real-time triggers, offer decisioning, and AI-powered content. Covers ESP migration and ecosystem integration.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
+      6 questions
     </div>
   </a>
 
@@ -108,7 +108,7 @@
     <p>Cross-channel analysis, attribution modeling, AI-driven insights, and audience publishing. Covers migration from Adobe Analytics and BI tool comparison.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
+      6 questions
     </div>
   </a>
 
@@ -118,7 +118,7 @@
     <p>A/B testing, AI-driven personalization, recommendations, and edge decisioning. Covers testing program strategy and competitive alternatives.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
+      6 questions
     </div>
   </a>
 
@@ -128,7 +128,7 @@
     <p>Analysis Workspace, advanced segmentation, AI-powered insights, and data collection strategy. Covers GA4 comparison and measurement frameworks.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
+      6 questions
     </div>
   </a>
 
@@ -138,7 +138,7 @@
     <p>Lead scoring, ABM, revenue cycle analytics, Salesforce integration, and Dynamic Chat. Covers HubSpot/Pardot comparison and migration strategy.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
+      6 questions
     </div>
   </a>
 
@@ -148,7 +148,7 @@
     <p>DITA-based structured authoring, content reuse, omnichannel publishing, and AI-assisted content management. Covers MadCap/Paligo comparison and migration.</p>
     <div class="meta">
       <svg viewBox="0 0 20 20" fill="currentColor"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/></svg>
-      6 root questions · 2 levels deep
+      6 questions
     </div>
   </a>
 
