--- a/content/aem-guides-question-tree.html
+++ b/content/aem-guides-question-tree.html
@@ -4,69 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>POP × Adobe AEM Guides: Question Tree</title>
-<style>
-  :root {
-    --pop-red: #E63946;
-    --pop-dark: #1D1D1D;
-    --pop-gray: #F8F8F8;
-    --pop-mid: #6B7280;
-    --pop-blue: #2563EB;
-    --pop-green: #059669;
-    --pop-amber: #D97706;
-    --radius: 10px;
-  }
-  * { margin: 0; padding: 0; box-sizing: border-box; }
-  body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: var(--pop-gray); color: var(--pop-dark); line-height: 1.6; }
-  .header { background: var(--pop-dark); color: #fff; padding: 32px 40px; }
-  .header h1 { font-size: 28px; font-weight: 700; }
-  .header .subtitle { color: #aaa; font-size: 14px; margin-top: 4px; }
-  .header .product-badge { display: inline-block; background: var(--pop-red); color: #fff; padding: 4px 14px; border-radius: 20px; font-size: 12px; font-weight: 600; margin-top: 12px; letter-spacing: 0.5px; }
-  .intro { max-width: 960px; margin: 24px auto; padding: 0 24px; }
-  .intro p { color: var(--pop-mid); font-size: 14px; }
-  .container { max-width: 960px; margin: 0 auto; padding: 0 24px 60px; }
-  .tree-root { margin-bottom: 20px; }
-  .question-node { border: 1px solid #E5E7EB; border-radius: var(--radius); background: #fff; margin-bottom: 12px; overflow: hidden; transition: box-shadow 0.2s; }
-  .question-node:hover { box-shadow: 0 2px 12px rgba(0,0,0,0.06); }
-  .question-header { display: flex; align-items: center; padding: 16px 20px; cursor: pointer; user-select: none; gap: 12px; }
-  .question-header .icon { width: 28px; height: 28px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 12px; font-weight: 700; flex-shrink: 0; }
-  .question-header .icon.client { background: #DBEAFE; color: var(--pop-blue); }
-  .question-header h3 { font-size: 15px; font-weight: 600; flex: 1; }
-  .question-header .tag { font-size: 11px; padding: 2px 10px; border-radius: 12px; font-weight: 600; flex-shrink: 0; }
-  .tag.discovery { background: #DBEAFE; color: var(--pop-blue); }
-  .tag.technical { background: #E0E7FF; color: #4338CA; }
-  .tag.objection { background: #FEE2E2; color: #B91C1C; }
-  .tag.value { background: #D1FAE5; color: #065F46; }
-  .tag.competitive { background: #FEF3C7; color: #92400E; }
-  .chevron { width: 20px; height: 20px; transition: transform 0.2s; flex-shrink: 0; color: #9CA3AF; }
-  .chevron.open { transform: rotate(90deg); }
-  .question-body { display: none; padding: 0 20px 20px 60px; }
-  .question-body.open { display: block; }
-  .answer-block { background: #F9FAFB; border-left: 3px solid var(--pop-green); padding: 16px; border-radius: 0 8px 8px 0; margin-bottom: 12px; }
-  .answer-block h4 { font-size: 13px; font-weight: 700; color: var(--pop-green); margin-bottom: 6px; text-transform: uppercase; letter-spacing: 0.5px; }
-  .answer-block p, .answer-block li { font-size: 14px; color: #374151; }
-  .answer-block ul { padding-left: 18px; margin-top: 6px; }
-  .answer-block li { margin-bottom: 4px; }
-  .redirect-block { background: #FFFBEB; border-left: 3px solid var(--pop-amber); padding: 16px; border-radius: 0 8px 8px 0; margin-bottom: 12px; }
-  .redirect-block h4 { font-size: 13px; font-weight: 700; color: var(--pop-amber); margin-bottom: 6px; text-transform: uppercase; letter-spacing: 0.5px; }
-  .redirect-block p, .redirect-block li { font-size: 14px; color: #374151; }
-  .redirect-block ul { padding-left: 18px; margin-top: 6px; }
-  .redirect-block li { margin-bottom: 4px; }
-  .pop-value { background: #EFF6FF; border-left: 3px solid var(--pop-blue); padding: 16px; border-radius: 0 8px 8px 0; margin-bottom: 12px; }
-  .pop-value h4 { font-size: 13px; font-weight: 700; color: var(--pop-blue); margin-bottom: 6px; text-transform: uppercase; letter-spacing: 0.5px; }
-  .pop-value p, .pop-value li { font-size: 14px; color: #374151; }
-  .pop-value ul { padding-left: 18px; margin-top: 6px; }
-  .pop-value li { margin-bottom: 4px; }
-  .sub-tree { margin-top: 16px; padding-left: 0; }
-  .sub-tree .question-node { border-color: #E5E7EB; background: #FAFAFA; }
-  .sub-tree .question-header { padding: 12px 16px; }
-  .sub-tree .question-header h3 { font-size: 14px; }
-  .sub-tree .question-body { padding: 0 16px 16px 52px; }
-  .nav-back { display: inline-block; margin: 24px 0 0; padding: 8px 20px; background: var(--pop-dark); color: #fff; text-decoration: none; border-radius: 6px; font-size: 13px; font-weight: 600; }
-  .nav-back:hover { background: #333; }
-  .search-bar { margin: 24px auto 0; max-width: 960px; padding: 0 24px; }
-  .search-bar input { width: 100%; padding: 12px 16px; border: 1px solid #D1D5DB; border-radius: 8px; font-size: 14px; outline: none; }
-  .search-bar input:focus { border-color: var(--pop-red); box-shadow: 0 0 0 3px rgba(230,57,70,0.1); }
-</style>
+<link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
 <div class="header">
@@ -484,7 +422,7 @@
 </div>
 
 <div class="container">
-  <a href="index.html" class="nav-back">← Back to All Products</a>
+  <a href="../index.html" class="nav-back">← Back to All Products</a>
 </div>
 
 <script>
